--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
                     dolores?</p>
             </article>
             <video class="info__video" controls loop preload="metadata"
-                src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.webm"></video>
+                src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.webm">Your browser does not
+                support <a
+                    href="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.webm">video</a></video>
         </div>
     </main>
     <section class="pluses">
